--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ plugins {
 }
 apply plugin: 'kotlin-android'
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "de.herrmann_engel.rbv"
         minSdk 25
-        targetSdk 31
-        versionCode 45
-        versionName '1.3.1'
+        targetSdk 32
+        versionCode 47
+        versionName '2.0.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -39,11 +39,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation("androidx.core:core-ktx:1.8.0")
     implementation 'com.google.android.material:material:1.6.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3-native-mt'
-
-
+    implementation 'io.noties.markwon:core:4.6.2'
 }
