--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RBV">
         <activity
+            android:name=".activities.ManageMedia"
+            android:configChanges="orientation|screenSize|screenLayout"
+            android:label="@string/manage_media" />
+        <activity
+            android:name=".activities.EditCardMedia"
+            android:configChanges="orientation|screenSize|screenLayout"
+            android:label="@string/edit_card_media" />
+        <activity
             android:name=".activities.AppLicenses"
             android:configChanges="orientation|screenSize|screenLayout"
             android:label="@string/licenses" />
