--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3-native-mt'
     implementation 'com.opencsv:opencsv:5.7.1'
     implementation 'io.noties.markwon:core:4.6.2'
+    implementation 'io.noties.markwon:linkify:4.6.2'
+    implementation 'me.saket:better-link-movement-method:2.2.0'
     implementation "com.vanniktech:emoji-twitter:0.15.0"
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.atlassian.commonmark:commonmark:0.13.0'
