--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity
             android:name=".activities.EditCardTags"
             android:configChanges="orientation|screenSize|screenLayout"
-            android:label="@string/tags" />
+            android:label="@string/edit_card_tag" />
         <activity
             android:name=".activities.AppLicenses"
             android:configChanges="orientation|screenSize|screenLayout"
